<resources>
    <string name="app_name">DeliYou</string>
    <string name="prefs_file">com.deliyoudev.PREFERENCE_FILE_KEY</string>
    <string name="slogan">La mejor comida, servida directamente en tu casa</string>
    <string name="Logo">Logo</string>
    <string name="signup">SignUp</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_up">Sing Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="telefono">Telefono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="login">Login</string>
    <string name="logins">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="registrarses">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_a_request">Send a request</string>
    <string name="have_a_restaurant">Have a restaurant?</string>
    <string name="deliyou">DeliYOU</string>
    <string name="log_in">Log In</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="register">Register</string>
    <string name="by_continuing_you_agree_to_our_terms_amp_conditions_and_privacy_policy"><![CDATA[By continuing, you agree to our Terms & Conditions and Privacy Policy]]></string>
    <string name="title_activity_main_page">MainPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="direcci_n">Dirección</string>
    <string name="tipo_de_comida">Tipo de comida</string>
    <string name="precio">Precio($-$$$)</string>
    <string name="url_al_logo">Url al logo</string>
    <string name="enviar_formulario">Enviar Formulario</string>
    <string name="nombre">Nombre</string>
</resources>