<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".form_restaurantdb">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="409dp"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="196dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Logo"
            android:src="@drawable/icono"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="301dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/deliyou"
            android:textAlignment="center"
            android:textColor="#5E008A"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="41dp"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <EditText
            android:id="@+id/restaurantNameForm"
            android:layout_width="255dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/restaurantAddressForm"
            android:layout_width="255dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/direcci_n"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantNameForm"
            app:layout_constraintVertical_bias="0.07" />

        <EditText
            android:id="@+id/restaurantMenuForm"
            android:layout_width="255dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tipo_de_comida"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantNameForm"
            app:layout_constraintVertical_bias="0.07" />

        <EditText
            android:id="@+id/restaurantPriceForm"
            android:layout_width="255dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/precio"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantNameForm"
            app:layout_constraintVertical_bias="0.07" />

        <EditText
            android:id="@+id/restaurantImageSrcForm"
            android:layout_width="255dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/url_al_logo"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantNameForm"
            app:layout_constraintVertical_bias="0.07" />

        <Button
            android:id="@+id/enviarformulario"
            android:layout_width="179dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/btnSignActive"
            android:text="@string/enviar_formulario"
            app:cornerRadius="4dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="140dp" />
    </LinearLayout>

</RelativeLayout>

