<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables"
        android:id="@+id/centerlayout">

        <ImageView
            android:layout_width="196dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Logo"
            android:src="@drawable/icono"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="255dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="255dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMail"
            app:layout_constraintVertical_bias="0.07" />

        <Button
            android:id="@+id/login"
            android:layout_width="107dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/btnSignActive"
            android:text="@string/logins"
            app:cornerRadius="4dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="140dp" />
    </LinearLayout>

</RelativeLayout>

